--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,17 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+    // https://mvnrepository.com/artifact/com.google.zxing/core
+    implementation 'com.google.zxing:core:3.5.2'
+
+    // https://mvnrepository.com/artifact/com.google.zxing/javase
+    implementation 'com.google.zxing:javase:3.5.2'
+
+    // https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j
+    implementation 'net.sf.barcode4j:barcode4j:2.1'
+
 }
 
 tasks.named('test') {
