--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 
+    /** Gson */
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 
     //lombok
     compileOnly 'org.projectlombok:lombok'
