--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     //Oracle
-    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
-    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+//    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
+//    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 
     //Postgres
-//    implementation group: 'org.postgresql', name: 'postgresql'
-//    runtimeOnly 'org.postgresql:postgresql'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.4'
+    runtimeOnly 'org.postgresql:postgresql'
 
     /** Token */
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
@@ -61,6 +61,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j
     implementation 'net.sf.barcode4j:barcode4j:2.1'
+
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
 }
 
