--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     //Oracle
-//    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
-//    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 
     //Postgres
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.4'
