Build : "Excel dependency 추가"

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // Excel IO
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.0.0'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
+
 }
 
 tasks.named('test') {
