--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     // Image Server : aws S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    // devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 }
 
 tasks.named('test') {
