--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,11 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'net.nurigo:javaSDK:2.2'
-
+    implementation 'net.nurigo:sdk:4.2.7'
 
     //Oracle
-    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
-    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+//    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
+//    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 
     //Postgres
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.4'
