feat : "기프티콘 사용, 재사용"
사용버튼 클릭시 기프티콘 상태 Finished로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
 
+    // nurigo 문자인증
+    implementation 'net.nurigo:sdk:4.2.7'
+
+
 }
 
 tasks.named('test') {
