--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'net.nurigo:sdk:4.2.7'
+    implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version: '1.3.0'
+
 
     //Oracle
 //    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '23.3.0.23.09'
